# obsidian-doc-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLANNING.md  README.md  TASKS.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: __init__.py  project_config.py
docs_generator/: __init__.py  analyzer.py  obsidian_converter.py  sphinx_integration.py
obsidian_output/: index.md
server/: __init__.py  mcp_server.py
server/resources/: __init__.py  configuration.py  documentation_status.py  project_structure.py
server/tools/: __init__.py  configure_project.py  generate_docs.py  link_analysis.py  update_docs.py  validate_docs.py
src/obsidian_doc_mcp/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py  test_mcp_complete_integration.py  test_mcp_server.py  test_performance_optimizations.py  test_sphinx_obsidian_pipeline.py
tests/unit/: __init__.py  test_analyzer.py  test_analyzer_cache.py  test_config.py  test_error_reporter.py  test_file_utils.py  test_file_watcher.py  test_generate_docs.py  test_incremental_build.py  test_incremental_generator_simple.py  test_memory_optimization.py  test_memory_optimized_generator.py  test_obsidian_converter.py  test_obsidian_utils.py  test_parallel_generator.py  test_parallel_processing.py  test_performance_profiler.py  test_progress_tracker.py  test_sphinx_integration.py
utils/: __init__.py  error_reporter.py  file_utils.py  file_watcher.py  incremental_build.py  incremental_generator.py  memory_optimized_generator.py  memory_optimizer.py  obsidian_utils.py  parallel_generator.py  parallel_processor.py  performance_profiler.py  progress_tracker.py
