[project]
name = "obsidian-doc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads Kristensen", email = "madskris@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
obsidian-doc-mcp = "obsidian_doc_mcp:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
